[package]
name = "psl_lb"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tonic = "0.8.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
prost = "0.11.0"
prost-types = "0.11.0"

prost-new = { version = "0.14.1", package = "prost" }
prost-new-types = { version = "0.14.1", package = "prost-types" }

psl = { git = "https://github.com/data-capsule/psl-cvm.git", branch = "psl" }

[build-dependencies]
tonic-build = "0.8.2"
prost-build = "0.11.0"
prost-new-build = { version = "0.14.1", package = "prost-build" }
